Bug 1555548 - Move pref into StaticPrefList. r=hiro

So we can use StaticPrefs::layout_css_individual_transform_enabled() in
the next patch.

Differential Revision: https://phabricator.services.mozilla.com/D33579